# frame

./: .gitignore  CMakeLists.txt  README.md
package/: metadata.desktop
package/contents/config/: main.xml
package/contents/ui/: ConfigGeneral.qml  ConfigPaths.qml  main.qml
plugin/: mediaframe.cpp  mediaframe.h  mediaframeplugin.cpp
